--- a/aula02 - box-model/index.html
+++ b/aula02 - box-model/index.html
@@ -13,5 +13,8 @@
     <div class="box">
         Conteúdo 2
     </div>
+    <a href="google.com">Google</a>
+
+    <a class="google" href="google.com">Google 2</a>
 </body>
 </html>
