--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -13,6 +13,7 @@
         <p>
             As tartarugas marinhas são essenciais para o equilíbrio ecológico dos oceanos
         </p>
+        <button>Gostei</button>
 
     </div>
 </body>
