--- a/remotaCard/index.html
+++ b/remotaCard/index.html
@@ -4,19 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gabarito</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-    <div class="box">
-        box
-    </div>
-
-    <div class="ball">
-        
-    </div>
-
+    <div class="card card1">Clique e segure</div>
+    <div class="card card2">Clique e segure</div>
 </body>
 
 </html>
