--- a/AV2 - 1 Periodo/index.html
+++ b/AV2 - 1 Periodo/index.html
@@ -130,7 +130,7 @@
             {
                 id: "014",
                 name: "Sofia",
-                projectUrl: "Sofia/index.html",
+                projectUrl: "Sofia_MarcosAnthony/index.html",
                 status: "completed",
             },
             {
